2007-08-25  Christian Persch  <chpe@gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-08-22  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:

	Enable printing to PDF file on gecko 1.9, now that moz#367907 is
	fixed.

2007-08-19  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/widgets/ephy-location-entry.c:

	Make cursor be at the end of the URL when selecting entries from the
	completion popup. Fixes bug #466344.

2007-08-16  Xan Lopez  <xan@gnome.org>

	* embed/webkit/webkit-embed.cpp (impl_reload): implement reload.

2007-08-16  Carlos Garcia Campos  <carlosgc@gnome.org>

	* lib/egg/egg-toolbar-editor.c: (set_drag_cursor):
	* lib/egg/egg-editable-toolbar.c: (configure_item_cursor),
	(new_pixbuf_from_widget):

	Fix multihead problems in toolbar editor.
	
2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/downloader-view.c:

	Fix download-icon toolip updates, patch by Cosimo Cecchi.
	Fixes bug #343238.

2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:

	Default to Cancel on Cert dialogues, patch by Cosimo Cecchi. 
	Fixes bug #163379.

2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/EphyUtils.cpp:
	* embed/mozilla/EphyHeaderSniffer.cpp:
	* embed/mozilla/MozDownload.cpp:

	Fix strict-aliasing warnings, patch by Cosimo Cecchi. 
	Happy 10 years GNOME!. Fixes bug #433173.

2007-08-13  Christian Persch  <chpe@gnome.org>

	=== Release 2.19.90 ===

	* Makefile.am:

	Try to fix distcheck.

2007-08-12  Christian Persch  <chpe@gnome.org>

	* data/icons/Makefile.am:

	Add low contrast app icon.

2007-08-09  Christian Persch  <chpe@gnome.org>

	* data/icons/Makefile.am:

	Fix icons install paths.

2007-08-09  Christian Persch  <chpe@gnome.org>

	* data/icons/Makefile.am:

	Fix icon cache update command.

2007-08-09  Christian Persch  <chpe@gnome.org>

	* data/icons/Makefile.am: