@@ -46,6 +46,7 @@
 #include <libsn/sn.h>
 #include <gdk/gdk.h>
 #include <gdk/gdkx.h>
+#include <gtk/gtkrecentmanager.h>
 
 #include <string.h>
 #include <stdlib.h>
@@ -486,6 +487,17 @@ void
 ephy_file_delete_on_exit (const char *path)
 {
 	/* does nothing now */
+}
+
+void
+ephy_file_add_recent_item (const char *uri,
+			   const char *mime_type)
+{	
+	GtkRecentManager *manager = gtk_recent_manager_get_default ();
+
+	g_return_if_fail (mime_type != NULL && uri != NULL);
+
+	gtk_recent_manager_add_item (manager, uri);
 }
 
 static void
